--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.mov filter=lfs diff=lfs merge=lfs -text
 *.gguf filter=lfs diff=lfs merge=lfs -text
 .final filter=lfs diff=lfs merge=lfs -text
+.my-app filter=lfs diff=lfs merge=lfs -text
